fix gap for media 1280
wait check

--- a/src/css/header.css
+++ b/src/css/header.css
@@ -69,6 +69,7 @@
   .header-elements {
     justify-content: center;
     align-items: center;
+    gap: 20px;
   }
 }
 
